# robot

./: .env.example  .gitignore  mise.toml  pyproject.toml  readme
robot/: __init__.py  cli.py  config.py  domain.py  observability.py  provider.py  proxy.py
robot/batch/: reader.py  runner.py  worker.py  writer.py
robot/io/: __init__.py  reader.py  writer.py
robot/osiptel/: browser.py  captcha.py  fetch.py  provider.py  request.py  session.py
robot/pipeline/: dispatcher.py  lookup_executor.py  session_runtime.py
robot/providers/: osiptel_http.py
robot/runtime/: __init__.py  live_runner.py  orchestrator.py  proxies.py  retry.py  snapshot_runner.py  summary.py  worker.py
robot/snapshot/: provider.py
tests/: test_domain.py
tests/test_batch/: test_reader.py  test_runner.py  test_worker.py  test_writer.py
tests/test_osiptel/: test_fetch.py  test_request.py  test_session.py
tests/test_snapshot/: test_provider.py
v2/app/: __init__.py  cli.py  config.py  run.py
v2/domain/: __init__.py  retry.py
v2/io/: __init__.py  checkpoint.py  writer.py
v2/obs/: __init__.py
v2/pipeline/: __init__.py  dispatcher.py  lookup_executor.py  reader.py  session_runtime.py  worker.py
v2/providers/: __init__.py  osiptel_browser.py  osiptel_flow.py  osiptel_http.py
