[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "robot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "seleniumbase>=4.47.4",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
robot = "robot.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
